Allow for custom nginx ports
Sets default for enduro at 8020, and cadence-web at 8030

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,6 +3,7 @@ enduro_version: "latest"
 enduro_binary_local_dir: ""
 enduro_listen_address: "127.0.0.1:9001"
 enduro_listen_api_address: "127.0.0.1:9000"
+enduro_http_port: 8020
 enduro_binary_install_dir: "/usr/local/bin"
 enduro_system_user: "enduro"
 enduro_system_group: "enduro"
@@ -17,6 +18,7 @@ enduro_db_name: "enduro"
 # Cadence-web
 cadence_web_path: "/usr/share/cadence-web"
 cadence_web_version: "3.4.1"
+cadence_web_http_port: 8030
 
 # Internal variables
 cadence_system_user: "cadence"
