--- a/tasks/install-cadence.yml
+++ b/tasks/install-cadence.yml
@@ -1,7 +1,3 @@
-- name: "Add cadence repository"
-  apt_repository:
-    repo: "deb [trusted=yes] https://jenkins-ci.archivematica.org/repos/am-packbuild/cadence/bionic/ ./"
-    state: present
 
 - name: Create the cadence group
   group:
@@ -20,9 +16,9 @@
     home: /var/lib/cadence
 
 - name: "Install cadence"
-  package:
-    name:
-      - cadence
+  yum:
+    name: "https://jenkins-ci.archivematica.org/repos/am-packbuild/centos8-extras/cadence-0.9.5-1.el7.x86_64.rpm"
+    state: present
 
 - name: "Populate cadence database"
   mysql_db:
@@ -41,3 +37,15 @@
   with_items:
     - /usr/share/cadence/migrations/visibility-migrations/v0.1/base.sql
   ignore_errors: true
+
+- name: "SELinux: Allow nginx to use ports 8000 and 8001"
+  become: "yes"
+  seport:
+    ports: "8020,8030"
+    proto: "tcp"
+    setype: "http_port_t"
+    state: "present"
+  when:
+    - ansible_selinux is defined and ansible_selinux != False and ansible_selinux.status == 'enabled'
+    - ansible_os_family == "RedHat"
+
