--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -36,3 +36,27 @@ cadence_visibility_db_pass: "visibility123P$"
 cadence_visibility_db_host: "localhost"
 cadence_visibility_db_name: "visibility"
 
+# nginx sites config sample for nginx role
+enduro_nginx_sites:
+  enduro:
+    - listen {{ enduro_http_port }}
+    - server_name _
+    - client_max_body_size 256M
+    - location / {
+        proxy_pass http://127.0.0.1:9000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      }
+  cadence-web:
+    - listen {{ cadence_web_http_port }}
+    - server_name _
+    - client_max_body_size 256M
+    - location / {
+        proxy_pass http://127.0.0.1:8088;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      }
